<resources>

    <string name="app_name">疯狂翻图 </string>
    <string name="team_name">丁丁工作室</string>

    <string name="turn_image_text">翻转图片</string>
    <string name="turn_image_retry">重新挑战</string>
    <string name="turn_next_text">下一关</string>
    <string name="turn_image_first">请您先翻转图片，然后再开始游戏</string>
    <string name="turn_image_sucess">恭喜您成功过关</string>
    <string name="turn_image_fail">Game Over!</string>
    <string name="turn_image_text1">疯</string>
    <string name="turn_image_text2">狂</string>
    <string name="turn_image_text3">翻</string>
    <string name="turn_image_text4">图</string>
    <string name="turn_image_main_text">开始游戏</string>
    <string name="next_part_aleart_title">该部分已完成，下部分更虐哦，你准备好了么？</string>
    <string name="main_part1_succeed">十二宫通关</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="choose_image_title">请您找出：    </string>
    <string name="choose_image_all_sucess">恭喜，您已经通关！敬请期待~~</string>
    <string name="main_part1">黄金十二宫</string>
    <string name="main_part2">极限挑战</string>

    <string name="record">战绩</string>
    <string name="part2record">最高得分</string>

    <string name="settings">设置</string>
    <string name="setting_personalize">个性化</string>
    <string name="setting_about_app">关于应用</string>
    <string name="settings_sound">音乐</string>
    <string name="settings_feedback">我要吐槽</string>
    <string name="settings_evaluate">给个好评</string>
    <string name="settings_update_version">新版本检测</string>
    <string name="settings_about_us">关于疯狂翻图</string>

    <string name="settings_update_version_newest">当前是最新版本^_^</string>

    <string name="settings_feedback_content">我们的成长离不开您的支持</string>
    <string name="settings_feedback_contact">微信/QQ/手机号（方便我们的沟通）</string>
    <string name="settings_feedback_send">发给我们</string>
    
    <string name="settings_about_us_label">疯狂翻图  疯狂到极致</string>
    <string name="settings_about_us_version">版本  V1.5.0</string>
    <string name="settings_about_us_content">感谢分享推荐朋友，我们的疯狂刚刚开始</string>
    <string name="settings_about_us_vendor">Copyright by 丁丁工作室</string>

</resources>
