<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        layout="@layout/common_title_bar" />

    <ImageView
        android:id="@+id/about_app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_below="@id/topView"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/about_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/settings_about_us_label"
        android:textColor="@color/dimgrey"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_app_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/settings_about_us_version"
        android:textColor="@color/greytext"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_app_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/settings_about_us_content"
        android:textColor="@color/greytext"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/settings_about_us_vendor"
        android:textColor="@color/greytext"
        android:textStyle="italic"
        android:textSize="14sp" />
</RelativeLayout>
