<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:gravity="top|left"
        android:background="@drawable/feedback_edittext"
        android:textSize="15sp"
        android:textColor="@color/dimgrey"
        android:hint="@string/settings_feedback_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@drawable/feedback_edittext"
        android:textSize="15sp"
        android:textColor="@color/dimgrey"
        android:hint="@string/settings_feedback_contact" />
    
    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:textColor="@color/hotel_top_bar"
        android:background="@drawable/record_name"
        android:text="@string/settings_feedback_send" />
</LinearLayout>
