<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/part1record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/dimgrey"
        android:text="@string/main_part1" />

    <GridView
        android:id="@+id/part1GridView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/part1record"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:verticalSpacing="10dp"
        android:numColumns="4" />

    <View
        android:id="@+id/recordSepatationLine"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/part1GridView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/mine_gray" />

    <TextView
        android:id="@+id/part2record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recordSepatationLine"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/dimgrey"
        android:text="@string/main_part2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/part2record"
        android:layout_marginTop="20dp" 
        android:orientation="horizontal">

        <TextView
            android:id="@+id/part2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/part2record"
            android:textColor="@color/hotel_top_bar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/part2ValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="100"
            android:textStyle="bold|italic"
            android:textColor="@color/blue_name"
            android:textSize="25sp" />
    </LinearLayout>

</RelativeLayout>